Added .idea files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 planifets/.idea/workspace.xml
 planifets/ionic.project
 planifets/.io-config.json
+planifets/.idea/modules.xml
+planifets/.idea/planifets.iml
+planifets/.idea/vcs.xml
