Added jsLibraryMappings.xml and planifets_node_modules.xml to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ planifets/.io-config.json
 planifets/.idea/modules.xml
 planifets/.idea/planifets.iml
 planifets/.idea/vcs.xml
+planifets/.idea/jsLibraryMappings.xml
+planifets/.idea/libraries/planifets_node_modules.xml
